Update the content

--- a/Style_Guide_Template/Template.html
+++ b/Style_Guide_Template/Template.html
@@ -51,14 +51,23 @@
 
       <section>
         <h2>In-text link</h2>
+        <p>
+            Lorem ipsum dolor sit amet consectetur adipisicing elit , <a href="#" class="in-text_link">sed do eiusmod tempor</a> incididunt ut labore et dolore magna aliqua.
+          </p>
       </section>
 
       <section>
         <h2>Submit/Reset Buttons</h2>
+        <div class="pos"><a href="#" class="btn">Submit</a></div>
+        <div class="pos"><a href="#" class="btn">Reset</a></div>
       </section>
 
       <section>
         <h2>Text Input Field</h2>
+        <div class="container-item example">
+          <label for="name">Name</label>    
+          <input type="text" id="name" placeholder="Allison" required>
+        </div>
       </section>
 
     </section>
@@ -71,18 +80,35 @@
 
       <section>
         <h2>Headings</h2>
+
+          <h1>Heading 1</h1>
+          <h2>Heading 2</h2>
+          <h3>Heading 3</h3>
+          <h4>Heading 4</h4>
+          
       </section>
 
       <section>
         <h2>Paragraphs</h2>
+        <p>This is a paragraph.</p>
       </section>
 
       <section>
         <h2>Bulleted Lists</h2>
+        <ul class="bulletedList">
+          <li>List item</li>
+          <li>List item</li>
+          <li>List item</li>
+        <ul>
       </section>
 
       <section>
         <h2>Numbered Lists</h2>
+        <ol class="numberedList">
+          <li>List item</li>
+          <li>List item</li>
+          <li>List item</li>
+        </ol>
       </section>
 
     </section>
@@ -95,15 +121,59 @@
 
       <section>
         <h2>Main Navigation</h2>
-      </section>
+          <div class="nav-container">
+            <nav>
+                <ul class="main-nav" id="js-menu">
+                    <li>
+                        <a href="styleguide.html" class="nav-links">Home</a>
+                    </li>
+                    <li>
+                        <a href="#" class="nav-links">Project</a>
+                    </li>
+                    <li>
+                        <a href="#" class="nav-links">About</a>
+                    </li>
+                </ul>
+            </nav>
+        </div>
 
-      <section>
-        <h2>Product Listing</h2>
-      </section>
+    <section>
+      <h2>Image as a link</h2>
+      <div class="container">
+        <img src="img_avatar.png" alt="Avatar" class="image">
+        <div class="overlay">My Name is John</div>
+      </div>  
+    </section>
+
 
     </section>
     <!-- // COMBINED ELEMENTS SECTION -->
+    <h2>Color pallete</h2>
+      <div class="container example">
+            <div class="color-box black">
+              <h4>Black</h4>
+              <p>#1a1c20</p>
+            </div>
+          <div class="color-box light-red">
+            <h4>Orange</h4>
+            <p>#f9813a</p>
+          </div>
+          <div class="color-box black">
+            <h4>Pink</h4>
+            <p>#ffd5cd</p>
+          </div>
+          <div class="color-box light-grey">
+            <h4>White</h4>
+            <p>#fcf1f1</p>
+          </div>
+      </div>
+    </section>
 
+    <section>
+      <h2>Font family</h2>
+      <h3>Titile font</h3>
+      <p>Paragraph font</p>
+    </section>
 
   </body>
 </html>
