--- a/Style_Guide_Template/Template.html
+++ b/Style_Guide_Template/Template.html
@@ -109,18 +109,30 @@
           &lt;input type="text" id="fname" name="fname" placeholder="Allison"&gt;&gt;br&gt;
           &lt;label for="lname"&gt;Last Name: &lt;/label&gt;
           &lt;input type="text" id="lname" name="lname" placeholder="Mu"&gt;
-          </code></div>
+          </code>
         </div>
         </div>
+        
       </section>
 
 
       <section>
-      <h2>Image as a link</h2>
-      <div class="pic-container">
-        <img src="img_avatar.png" alt="Avatar" class="image">
-        <div class="overlay">My Name is John</div>
-      </div>  
+      <div class="flex-container image-code-box">
+        <h2>Image as a link</h2>
+        <div class="pic-container">
+          <img src="images/poster2.png" alt="IAT 103 - poster" class="image">
+          <div class="overlay">IAT 103 - Final Poster</div>
+        </div> 
+        <div class="image-code">        
+          <code class="image-code">
+          HTML:<br>
+          &lt;div class="pic-container"&gt;<br>
+          &lt;img src="images/poster2.png" alt="IAT 103 - poster" class="image"&gt;<br>
+          &lt;div class="overlay"&gt;IAT 103 - Final Poster&lt;/div&gt;<br>
+        &lt;/div&gt;
+          </code>
+        </div>
+      </div>   
     </section>
 
     </div>
@@ -133,18 +145,42 @@
     <section id="text_elements">
       <div class="container">
       <section>
+        <div class="flex-container">
         <h2>Headings</h2>
-
-          <h1>Heading 1</h1>
-          <h2>Heading 2</h2>
-          <h3>Heading 3</h3>
-          <h4>Heading 4</h4>
-          
+          <div>
+            <h1>Heading 1</h1>
+            <h2>Heading 2</h2>
+            <h3>Heading 3</h3>
+            <h4>Heading 4</h4>
+          </div>
+          <div class="code-box image-code">
+          <code>
+            HTML:<br>
+            &lt;div&gt;
+            &lt;h1&gt;Heading 1&lt;/h1&gt;<br>
+            &lt;h2&gt;Heading 2&lt;/h2&gt;<br>
+            &lt;h3&gt;Heading 3&lt;/h3&gt;<br>
+            &lt;h4&gt;Heading 4&lt;/h4&gt;<br>
+          &lt;/div&gt;
+          </code>
+          </div>
+        </div>  
       </section>
 
       <section>
+        <div class="flex-container">
         <h2>Paragraphs</h2>
+        <div>
         <p>This is a paragraph.</p>
+        </div>
+        <div class="code-box">
+          <code>
+            HTML:<br>
+            &lt;p&gt;This is a paragraph.&lt;/p&gt;
+          </code>
+        </div>
+        </div>  
+        </div>
       </section>
 
       <section>
