--- a/Style_Guide_Template/Template.html
+++ b/Style_Guide_Template/Template.html
@@ -15,10 +15,7 @@
 
     <h1 class="title">Style Guide Template</h1>
 
-    <p>A template you can use to start building out your own style guides with.</p>
-
-
-    <nav>
+<!--     <nav>
       
       <p>
         Go to:
@@ -28,7 +25,16 @@
       </p>
 
     </nav>
+ --> <div class="nav-container">
+            <nav>
+                <ul class="main-nav" id="js-menu">
 
+                    <li><a href="#interactive_elements" class="active">Interactive Elements</a></li>
+                    <li><a href="#text_elements">Text Elements</a></li>
+                    <li><a href="#combined_elements">Combined Elements</a></li>
+                </ul>
+            </nav>
+      </div>
 
 
     <!-- INTERACTIVE ELEMENTS SECTION // -->
@@ -53,6 +59,7 @@
 
       <div class="container">
       <section>
+        <h1 class="sub-title">INTERACTIVE ELEMENTS</h1>
         <div class="flex-container">
          <h2>In-text link</h2>
          <div>
@@ -95,6 +102,7 @@
 
       <section>
         <div class="flex-container">
+
         <h2>Text Input Field</h2>
         <div>
           <label for="fname">First Name: </label>
@@ -144,6 +152,7 @@
     <!-- TEXT ELEMENTS SECTION // -->
     <section id="text_elements">
       <div class="container">
+      <h1 class="sub-title">Text Elements</h1>
       <section>
         <div class="flex-container">
         <h2>Headings</h2>
@@ -180,27 +189,55 @@
           </code>
         </div>
         </div>  
-        </div>
+        
       </section>
 
       <section>
+        <div class="flex-container">
         <h2>Bulleted Lists</h2>
-        <ul class="bulletedList">
+        <div>
+        <ul>
           <li>List item</li>
           <li>List item</li>
           <li>List item</li>
         </ul>
+        </div>
+        <div class="code-box">
+          <code>
+            HTML:<br>
+            &lt;ul&gt;<br>
+          &lt;li&gt;List item&lt;/li&gt;<br>
+          &lt;li&gt;List item&lt;/li&gt;<br>
+          &lt;li&gt;List item&lt;/li&gt;<br>
+          &lt;/ul&gt;
+          </code>
+        </div>
+       </div>
       </section>
 
       <section>
+        <div class="flex-container">
         <h2>Numbered Lists</h2>
+        <div>
         <ol class="numberedList">
           <li>List item</li>
           <li>List item</li>
           <li>List item</li>
         </ol>
+        </div>
+        <div class="code-box">
+          <code>
+            HTML:<br>
+            &lt;ol&gt;<br>
+          &lt;li&gt;List item&lt;/li&gt;<br>
+          &lt;li&gt;List item&lt;/li&gt;<br>
+          &lt;li&gt;List item&lt;/li&gt;<br>
+          &lt;/ol&gt;
+          </code>
+        </div>
+      </div>
       </section>
-    </div>
+      </div>
     </section>
     <!-- // TEXT ELEMENTS SECTION -->
 
@@ -208,50 +245,49 @@
 
     <!-- COMBINED ELEMENTS SECTION // -->
     <section id="combined_elements">
-
+<div class="container">
       <section>
         <h2>Main Navigation</h2>
           <div class="nav-container">
             <nav>
                 <ul class="main-nav" id="js-menu">
+
                     <li><a href="styleguide.html" class="active">Home</a></li>
                     <li><a href="#">Project</a></li>
                     <li><a href="#">StyleGuide</a></li>
                 </ul>
             </nav>
         </div>
-
-
-
-
     </section>
-    <!-- // COMBINED ELEMENTS SECTION -->
+    <!-- colors -->
+    <section>
     <h2>Color pallete</h2>
-      <div class="container example">
-            <div class="color-box black">
+      <div class="flex-container">
+            <div class="color black">
               <h4>Black</h4>
               <p>#1a1c20</p>
             </div>
-          <div class="color-box light-red">
+          <div class="color orange">
             <h4>Orange</h4>
             <p>#f9813a</p>
           </div>
-          <div class="color-box black">
+          <div class="color pink">
             <h4>Pink</h4>
             <p>#ffd5cd</p>
           </div>
-          <div class="color-box light-grey">
+          <div class="color white">
             <h4>White</h4>
             <p>#fcf1f1</p>
           </div>
       </div>
     </section>
-
-    <section>
-      <h2>Font family</h2>
-      <h3>Titile font</h3>
-      <p>Paragraph font</p>
+    <!-- fonts -->
+     <section>
+      <h2>Font family </h2>
+      <h3>Titile font - Playfair Display</h3>
+      <p>Paragraph font - Amiro</p>
     </section>
-
+  </div>
+    <!-- // COMBINED ELEMENTS SECTION -->
   </body>
 </html>
