--- a/Style_Guide_Template/project.html
+++ b/Style_Guide_Template/project.html
@@ -20,8 +20,8 @@
                 <ul class="main-nav" id="js-menu">
 
                     <li><a href="Template.html" class="active">Styleguide</a></li>
-                    <li><a href="#text_elements">Project1</a></li>
-                    <li><a href="#combined_elements">Project2</a></li>
+                    <li><a href="project.html">Project1</a></li>
+                    <li><a href="project2.html">Project2</a></li>
                 </ul>
             </nav>
       </div>
@@ -30,9 +30,8 @@
       <section>
       <div class="flex-container image-code-box">
         <h2>Graphic - Poster Design</h2>
-        <div class="pic-container">
-          <img src="images/poster2.png" alt="IAT 103 - poster" class="image">
-          <div class="overlay">IAT 103 - Final Poster</div>
+        <div class="websitePic">
+          <img src="images/website.png" alt="IAT 103 - poster" class="image">
         </div> 
         <div class="right-content">
           <div>
