Update initial web page

--- a/Style_Guide_Template/Template.html
+++ b/Style_Guide_Template/Template.html
@@ -289,5 +289,15 @@
     </section>
   </div>
     <!-- // COMBINED ELEMENTS SECTION -->
+
+    <!-- bio -->
+    <div class="container">
+     <section>
+      <h1 class="sub-title">About Me</h1>
+      <h3>Yuqingqing Mu(Allison)</h3>
+      <p>Highly creative and motivated interactive arts and technology program student with graphic & web design experience critical thinking and problem solving skills. As a curious learner, I am good at communicating with colleagues and learning new things. For me, the most interesting part of graphic design is that I could express my personality by my works and communicate with the audiences. Skilled in Adobe Creative Suite, including Photoshop, InDesign, Illustrator, and more.</p>
+      <p>Click to view <a href="../project.html" class="in-text-link">initial web page.</a></p>
+    </section>
+  </div>
   </body>
 </html>
