--- a/project2.html
+++ b/project2.html
@@ -6,7 +6,7 @@
     <meta charset="utf-8">
     <title>Style Guide Template</title>
 
-    <link href="css/main.css" rel="stylesheet">
+    <link href="Style_Guide_Template/css/main.css" rel="stylesheet">
     <link href='https://fonts.googleapis.com/css?family=Playfair Display' rel='stylesheet'>
     <link href='https://fonts.googleapis.com/css?family=Arimo' rel='stylesheet'>
   </head>
@@ -19,7 +19,8 @@
             <nav>
                 <ul class="main-nav" id="js-menu">
 
-                    <li><a href="Template.html" class="active">Styleguide</a></li>
+                    <li><a href="Style_Guide_Template/Template.html" class="active">Styleguide</a></li>
+                    <li><a href="Home.html">Home</a></li>
                     <li><a href="project.html">Project1</a></li>
                     <li><a href="project2.html">Project2</a></li>
                 </ul>
@@ -30,8 +31,9 @@
       <section>
       <div class="flex-container image-code-box">
         <h2>Graphic - Poster Design</h2>
-        <div class="websitePic">
-          <img src="images/website.png" alt="IAT 103 - poster" class="image">
+        <div class="pic-container">
+          <img src="Style_Guide_Template/images/poster2.png" alt="IAT 103 - poster" class="image">
+          <div class="overlay">IAT 103 - Final Poster</div>
         </div> 
         <div class="right-content">
           <div>
