Add process detail

--- a/project.html
+++ b/project.html
@@ -51,7 +51,7 @@
           </div>
 
           <div><h3>Challenge</h3>
-            <p>The biggest challenge is to design a user-friendly website for all the users. Since there are many different devices now, for instance, Ipad, Iphone and PC, our website should work for all of them.  At the first, the users experience on mobile phone was terrible due to all the text are compressed together; the image is too small; and the navigation bar can not work. In order to solve the problem, we conducted usability test on different devices and fix the problem.</p>
+            <p>The biggest challenge is to design a user-friendly website for all the users. Since there are many different devices now, for instance, Ipad, Iphone and PC, our website should work for all of them.  At the first, the layout of web page is not responsive on different devices, for instance, all the text are compressed together; the image is too small; and the navigation bar can not work. In order to solve the problem, we conducted usability test on different devices and fix the problem.</p>
         </div>
       </div> 
       </div>  
