--- a/project2.html
+++ b/project2.html
@@ -4,9 +4,10 @@
   <head>
 
     <meta charset="utf-8">
-    <title>Style Guide Template</title>
+    <title>Poster Design</title>
 
     <link href="Style_Guide_Template/css/main.css" rel="stylesheet">
+    <link href="css/project.css" rel="stylesheet">
     <link href='https://fonts.googleapis.com/css?family=Playfair Display' rel='stylesheet'>
     <link href='https://fonts.googleapis.com/css?family=Arimo' rel='stylesheet'>
   </head>
@@ -21,8 +22,8 @@
 
                     <li><a href="Style_Guide_Template/Template.html" class="active">Styleguide</a></li>
                     <li><a href="Home.html">Home</a></li>
-                    <li><a href="project.html">Project1</a></li>
-                    <li><a href="project2.html">Project2</a></li>
+                    <li><a href="project.html">Web Design</a></li>
+                    <li><a href="project2.html">Poster Design</a></li>
                 </ul>
             </nav>
       </div>
@@ -56,8 +57,55 @@
       </div>  
       </section>
   </div>
-      
+  
+  <div class="container">
+    <h1 class="sub-title">Process</h1>
 
+    <div class="flex-container">
+    <img src="Style_Guide_Template/images/brainstorm.jpg" alt="IAT 103 - poster" class="process-image">
+    <div><h3>Step 1 - Brainstorm</h3><p>Analyzing first year student’s state, what is their need? What is the content on the poster? This step help a team to decide th elements of a poster, and make sure the working direction</p></div>
+    </div>
+
+
+    <div class="flex-container">
+    <div><h3>Step 2 - Draft 1</h3><p>This is a hand draw draft, the purpose of it is to decid the color pallete and the layout. However</p></div>
+    <img src="Style_Guide_Template/images/draft.jpg" alt="IAT 103 - poster" class="posters">
+    <img src="Style_Guide_Template/images/draft2.jpg" alt="IAT 103 - poster" class="posters">
+    </div>
+
+    <div class="flex-container">
+    <div>
+    <img src="Style_Guide_Template/images/coffe.png" alt="IAT 103 - poster" class="icon">
+    <img src="Style_Guide_Template/images/puzzle.png" alt="IAT 103 - poster" class="icon"></div>
+    <div><h3>Step 3 - Illustate visual element</h3><p>Instead of the cartoon character, we would like to use student's daily items to represent each individual, for instance, cofffe cups, puzzel and smart phone.</p></div>
+    </div>
+
+    <div class="flex-container">
+    <div><h3>Step 3 - Illustate visual element</h3><p>Instead of the cartoon character, we would like to use student's daily items to represent each individual, for instance, cofffe cups, puzzel and smart phone.</p></div>
+    <img src="Style_Guide_Template/images/draft3.png" alt="IAT 103 - poster" class="posters">
+    <img src="Style_Guide_Template/images/process.png" alt="IAT 103 - poster" class="posters">
+    </div>
+
+  </div>
+<div class="container">
+        <h1 class="sub-title"> Final Poster</h1>
+        <div class="flex-container">
+        <div class="pic-container">
+        <img src="Style_Guide_Template/images/poster.png" alt="IAT 103 - poster" class="image">
+        <div class="overlay">IAT 103 - Final Poster</div>
+        </div> 
+
+        <div class="pic-container">
+        <img src="Style_Guide_Template/images/poster3.png" alt="IAT 103 - poster" class="image">
+        <div class="overlay">IAT 103 - Final Poster</div>
+        </div>
+
+        <div class="pic-container">
+        <img src="Style_Guide_Template/images/poster2.png" alt="IAT 103 - poster" class="image">
+        <div class="overlay">IAT 103 - Final Poster</div>
+        </div>
+        </div> 
+</div>
     <!-- // COMBINED ELEMENTS SECTION -->
   </body>
 </html>
