Change the responsive

--- a/project2.html
+++ b/project2.html
@@ -81,7 +81,7 @@
     </div>
 
     <div class="flex-container">
-    <div><h3>Step 3 - Illustate visual element</h3><p>Instead of the cartoon character, we would like to use student's daily items to represent each individual, for instance, cofffe cups, puzzel and smart phone.</p></div>
+    <div><h3>Step 4 - Digital Draft</h3><p>In this stage, we started to creat a digital draft with the previous elements, and choose the san-serif font as the title font, because the style could match the theme. But the background is a little bit empty which could add more decoration elements.</p></div>
     <img src="Style_Guide_Template/images/draft3.png" alt="IAT 103 - poster" class="posters">
     <img src="Style_Guide_Template/images/process.png" alt="IAT 103 - poster" class="posters">
     </div>
@@ -105,6 +105,15 @@
         <div class="overlay">IAT 103 - Final Poster</div>
         </div>
         </div> 
+</div>
+
+<div class="container">
+        <div class="flex-container">
+        <h1 class="sub-title"> Reflection</h1>
+        <div class="right-content">
+        <p>I learned a lot by doing the project with my teammates. The first thing is we should analyzing the target audience, then we will know what is kind of poster will get their attention in order to run a campaign. Secondly, typography layout could be also important besides the illustration </p>
+        </div>
+        </div>
 </div>
     <!-- // COMBINED ELEMENTS SECTION -->
   </body>
