add aos library

--- a/project.html
+++ b/project.html
@@ -9,6 +9,8 @@
     <link href="Style_Guide_Template/css/main.css" rel="stylesheet">
     <link href='https://fonts.googleapis.com/css?family=Playfair Display' rel='stylesheet'>
     <link href='https://fonts.googleapis.com/css?family=Arimo' rel='stylesheet'>
+    <link href="css/aos.css" rel="stylesheet">
+    <script src="aos.js"></script>
   </head>
 
   <body>
@@ -58,7 +60,7 @@
       </section>
   </div>
       
-
+   <div class="intro" data-aos="zoom-in" data-aos-anchor-placement="bottom-bottom"><h2>Animated using <code>zoom-in</code>.</h2></div>
     <!-- // COMBINED ELEMENTS SECTION -->
   </body>
 </html>
