--- a/Home.html
+++ b/Home.html
@@ -6,10 +6,17 @@
     <meta charset="utf-8">
     <title>Style Guide Template</title>
 
-    <link href="Style_Guide_Template/css/main.css" rel="stylesheet">
+   <!--  <link href="Style_Guide_Template/css/main.css" rel="stylesheet"> -->
     <link href='https://fonts.googleapis.com/css?family=Playfair Display' rel='stylesheet'>
     <link href="css/home.css" rel="stylesheet">
     <link href='https://fonts.googleapis.com/css?family=Arimo' rel='stylesheet'>
+    <link href='https://fonts.googleapis.com/css?family=Playfair Display' rel='stylesheet'>
+<!--     <link href="css/aos.css" rel="stylesheet">
+    <script src="aos.js"></script> -->
+    <link href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet">
+    <script src="https://cdn.rawgit.com/michalsnik/aos/2.1.1/dist/aos.js"></script>
+
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
   </head>
 
   <body>
@@ -17,17 +24,18 @@
     <!-- <h1 class="title">Allison Mu</h1>
  -->
     <div class="nav-container">
+            <!-- <h1 class="logo"><a href="home.html">AllisonMu</a></h1> -->
             <nav>
                 <ul class="main-nav" id="js-menu">
-
-                    <li><a href="Style_Guide_Template/Template.html" class="active">Styleguide</a></li>
-                    <li><a href="project.html">Project1</a></li>
-                    <li><a href="project2.html">Project2</a></li>
+                    <li class="active"><a href="Style_Guide_Template/Template.html" class="link">Styleguide</a></li>
+                    <li><a href="project.html" class="link">Web</a></li>
+                    <li><a href="project2.html" class="link">Graphic</a></li>
+                    <li><a href="project2.html"class="link">Contact</a></li>
                 </ul>
             </nav>
       </div>
 
-
+<!-- 
     <div class="flex-intro">
       <div>
       <div>
@@ -36,12 +44,29 @@
       <div><h2>A Curious Learner and A Graphic Designer</h2>
       </div>
       </div>
-    </div>
-    <div class="text-container">
+    </div> -->
+
+<!--     <div class="text-container">
         <p>Highly creative and motivated interactive arts and technology program student with graphic & web design experience critical thinking and problem solving skills. As a curious learner, I am good at communicating with colleagues and learning new things. For me, the most interesting part of graphic design is that I could express my personality by my works and communicate with the audiences. Skilled in Adobe Creative Suite, including Photoshop, InDesign, Illustrator, and more.</p>
     </div>
+ -->
+ <section class="section1">
+   <div class="intro a" data-aos="fade-right" data-aos-anchor-placement="bottom-bottom"><h1>Hello</h1></div>
+   <br>
+   <div class="intro b" data-aos="fade-up" data-aos-anchor-placement="bottom-bottom"><h1>I'M ALLISON</h1></div>
+   <!-- <div class="pos"><a href="#" class="btn btn-2">Submit</a></div> -->
 
-
-    <!-- // COMBINED ELEMENTS SECTION -->
+   <div class="banner-bridge-center">
+      <a class="scroll-button" href="#section2">
+      <i class="fa fa-angle-down"></i>
+      </a>
+</div>
+</section>
+<section class="section2">
+  <div></div>
+</section>
+   <script>
+  AOS.init();
+</script>
   </body>
 </html>
