Fix responsive problem

--- a/Home.html
+++ b/Home.html
@@ -4,15 +4,11 @@
   <head>
 
     <meta charset="utf-8">
-    <title>Style Guide Template</title>
-
-   <!--  <link href="Style_Guide_Template/css/main.css" rel="stylesheet"> -->
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <title>Allison's Portfolio</title>
     <link href='https://fonts.googleapis.com/css?family=Playfair Display' rel='stylesheet'>
     <link href="css/home.css" rel="stylesheet">
     <link href='https://fonts.googleapis.com/css?family=Arimo' rel='stylesheet'>
-    <link href='https://fonts.googleapis.com/css?family=Playfair Display' rel='stylesheet'>
-<!--     <link href="css/aos.css" rel="stylesheet">
-    <script src="aos.js"></script> -->
     <link href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet">
     <script src="https://cdn.rawgit.com/michalsnik/aos/2.1.1/dist/aos.js"></script>
 
@@ -51,19 +47,46 @@
     </div>
  -->
  <section class="section1">
-   <div class="intro a" data-aos="fade-right" data-aos-anchor-placement="bottom-bottom"><h1>Hello</h1></div>
-   <br>
-   <div class="intro b" data-aos="fade-up" data-aos-anchor-placement="bottom-bottom"><h1>I'M ALLISON</h1></div>
-   <!-- <div class="pos"><a href="#" class="btn btn-2">Submit</a></div> -->
+  <div class="flex-title">
 
+   <div class="left-content">
+     <div><h1>A Creative</h1></div>
+     <div><h1>Designer</h1></div>
+     <div><h1>With</h1></div>
+     <div><h1>Passion</h1></div>
+   </div>
+
+
+   <div class="right-content">
+      <div class="intro a" data-aos="fade-left" data-aos-anchor-placement="bottom-bottom" data-aos-duration="1000"><h1>Hello!</h1></div>
+
+      <div class="intro b" data-aos="fade-left" data-aos-anchor-placement="bottom-bottom" data-aos-duration="1000"><h1>I'M ALLISON</h1>
+      </div>
+   </div>
+
+
+  </div>
    <div class="banner-bridge-center">
       <a class="scroll-button" href="#section2">
-      <i class="fa fa-angle-down"></i>
+      <i class="fa fa-angle-down" href="#section2"></i>
       </a>
-</div>
+   </div>
 </section>
-<section class="section2">
-  <div></div>
+
+<section class="section2" >
+  <div id="section2">
+    <h1>About Me</h1>
+    <div><p>Highly creative and motivated interactive arts and technology program student with graphic & web design experience critical thinking and problem solving skills. As a curious learner, I am good at communicating with colleagues and learning new things. For me, the most interesting part of graphic design is that I could express my personality by my works and communicate with the audiences.</p></div>
+    <div><h2>My Skill</h2>
+        <ul>Adobe Software
+          <li>Illustrator</li>
+          <li>Primier</li>
+          <li>PhotoShop</li>
+          <li>Indesign</li>
+        </ul>
+    </div>
+
+  </div>
 </section>
    <script>
   AOS.init();
