--- a/Home.html
+++ b/Home.html
@@ -74,9 +74,15 @@
 </section>
 
 <section class="section2" >
-  <div id="section2">
-    <h1>About Me</h1>
-    <div><p>Highly creative and motivated interactive arts and technology program student with graphic & web design experience critical thinking and problem solving skills. As a curious learner, I am good at communicating with colleagues and learning new things. For me, the most interesting part of graphic design is that I could express my personality by my works and communicate with the audiences.</p></div>
+  <div id="section2" class="flex-about">
+    
+    <div> 
+    <span class="txt">
+      <span>ABOUT</span><br/>
+      <span>ME</span>
+      <span class="dot">.</span></span>
+      <p>Highly creative and motivated interactive arts and technology program student with graphic & web design experience critical thinking and problem solving skills. As a curious learner, I am good at communicating with colleagues and learning new things. For me, the most interesting part of graphic design is that I could express my personality by my works and communicate with the audiences.</p></div>
+
     <div><h2>My Skill</h2>
         <ul>Adobe Software
           <li>Illustrator</li>
