--- a/Home.html
+++ b/Home.html
@@ -11,26 +11,37 @@
     <link href='https://fonts.googleapis.com/css?family=Arimo' rel='stylesheet'>
     <link href="css/footer.css" rel="stylesheet">
     <link href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet">
-    <script src="https://cdn.rawgit.com/michalsnik/aos/2.1.1/dist/aos.js"></script>
-
+     <script src="https://cdn.rawgit.com/michalsnik/aos/2.1.1/dist/aos.js"></script>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
   </head>
 
   <body>
 
-    <!-- <h1 class="title">Allison Mu</h1>
- -->
-    <div class="nav-container">
-            <!-- <h1 class="logo"><a href="home.html">AllisonMu</a></h1> -->
-            <nav>
+    <div class="topnav" id="myTopnav">
+            <nav  class="navbar" id="myTopnav">
                 <ul class="main-nav" id="js-menu">
+                    <a href="javascript:void(0);" class="icon" onclick="myFunction()">
+                    <i class="fa fa-bars"></i>
+                    </a>
                     <li class="active"><a href="Style_Guide_Template/Template.html" class="link">Styleguide</a></li>
                     <li><a href="project.html" class="link">Web</a></li>
                     <li><a href="project2.html" class="link">Graphic</a></li>
                     <li><a href="project2.html"class="link">Contact</a></li>
                 </ul>
             </nav>
+            <script src="nav.js"></script>
       </div>
+
+      <div id="myNav" class="overlay">
+        <a href="javascript:void(0)" class="closebtn" onclick="closeNav()">&times;</a>
+       <div class="overlay-content">
+           <a href="#">About</a>
+           <a href="#">Services</a>
+           <a href="#">Clients</a>
+           <a href="#">Contact</a>
+        </div>
+        </div>
+
 
 <!-- 
     <div class="flex-intro">
