Update the project details

--- a/Home.html
+++ b/Home.html
@@ -21,26 +21,16 @@
             <nav  class="navbar" id="myTopnav">
                 <ul class="main-nav" id="js-menu">
                     <a href="javascript:void(0);" class="icon" onclick="myFunction()">
-                    <i class="fa fa-bars"></i>
+                    <i class="fa fa-bars fa-2x"></i>
                     </a>
                     <li class="active"><a href="Style_Guide_Template/Template.html" class="link">Styleguide</a></li>
-                    <li><a href="project.html" class="link">Web</a></li>
+                    <li><a href="Home.html" class="link">Home</a></li>
                     <li><a href="project2.html" class="link">Graphic</a></li>
                     <li><a href="project2.html"class="link">Contact</a></li>
                 </ul>
             </nav>
             <script src="nav.js"></script>
       </div>
-
-      <div id="myNav" class="overlay">
-        <a href="javascript:void(0)" class="closebtn" onclick="closeNav()">&times;</a>
-       <div class="overlay-content">
-           <a href="#">About</a>
-           <a href="#">Services</a>
-           <a href="#">Clients</a>
-           <a href="#">Contact</a>
-        </div>
-        </div>
 
 
 <!-- 
