--- a/project.html
+++ b/project.html
@@ -15,20 +15,21 @@
 
   <body>
 
-    <h1 class="title">Allison Mu</h1>
-
-    <div class="nav-container">
-            <nav>
+    <div class="topnav" id="myTopnav">
+            <nav  class="navbar" id="myTopnav">
                 <ul class="main-nav" id="js-menu">
-
-                    <li><a href="Style_Guide_Template/Template.html" class="active">Styleguide</a></li>
-                    <li><a href="Home.html">Home</a></li>
-                    <li><a href="project.html">Project1</a></li>
-                    <li><a href="project2.html">Project2</a></li>
+                    <a href="javascript:void(0);" class="icon" onclick="myFunction()">
+                    <i class="fa fa-bars fa-2x"></i>
+                    </a>
+                    <li class="active"><a href="Style_Guide_Template/Template.html" class="link">Styleguide</a></li>
+                    <li><a href="Home.html" class="link">Home</a></li>
+                    <li><a href="project2.html" class="link">Graphic</a></li>
+                    <li><a href="project2.html"class="link">Contact</a></li>
                 </ul>
             </nav>
+            <script src="nav.js"></script>
       </div>
-
+      <section>
       <div class="container">
       <section>
       <div class="flex-container image-code-box">
@@ -59,7 +60,7 @@
       </div>  
       </section>
   </div>
-      
+  </section>      
    <div class="intro" data-aos="zoom-in" data-aos-anchor-placement="bottom-bottom"><h2>Animated using <code>zoom-in</code>.</h2></div>
     <!-- // COMBINED ELEMENTS SECTION -->
   </body>
