--- a/project2.html
+++ b/project2.html
@@ -6,77 +6,87 @@
     <meta charset="utf-8">
     <title>Poster Design</title>
 
-    <link href="Style_Guide_Template/css/main.css" rel="stylesheet">
+   <!--  <link href="Style_Guide_Template/css/main.css" rel="stylesheet"> -->
+   <!-- <link href="css/home.css" rel="stylesheet"> -->
     <link href="css/project.css" rel="stylesheet">
     <link href='https://fonts.googleapis.com/css?family=Playfair Display' rel='stylesheet'>
     <link href='https://fonts.googleapis.com/css?family=Arimo' rel='stylesheet'>
+      <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
   </head>
 
   <body>
-
-    <h1 class="title">Allison Mu</h1>
-
-    <div class="nav-container">
-            <nav>
+    <div class="topnav" id="myTopnav">
+            <nav  class="navbar" id="myTopnav">
                 <ul class="main-nav" id="js-menu">
-
-                    <li><a href="Style_Guide_Template/Template.html" class="active">Styleguide</a></li>
-                    <li><a href="Home.html">Home</a></li>
-                    <li><a href="project.html">Web Design</a></li>
-                    <li><a href="project2.html">Poster Design</a></li>
+                    <a href="javascript:void(0);" class="icon" onclick="myFunction()">
+                    <i class="fa fa-bars fa-2x"></i>
+                    </a>
+                    <li class="active"><a href="Style_Guide_Template/Template.html" class="link">Styleguide</a></li>
+                    <li><a href="Home.html" class="link">Home</a></li>
+                    <li><a href="project2.html" class="link">Graphic</a></li>
+                    <li><a href="project2.html"class="link">Contact</a></li>
                 </ul>
             </nav>
+            <script src="nav.js"></script>
       </div>
 
-      <div class="container">
       <section>
-      <div class="flex-container image-code-box">
-        <h2>Graphic - Poster Design</h2>
+      <div class="container">
+      
+        <h1>Graphic - Poster Design</h1>
         <div class="pic-container">
-          <img src="Style_Guide_Template/images/poster2.png" alt="IAT 103 - poster" class="image">
-          <div class="overlay">IAT 103 - Final Poster</div>
+          <div>
+          <img src="images/poster2.png" alt="IAT 103 - poster" class="posterImage"></div>
+          <div><img src="Style_Guide_Template/images/poster3.png" alt="IAT 103 - poster" class="posterImage"></div>
+          <div><img src="Style_Guide_Template/images/poster.png" alt="IAT 103 - poster" class="posterImage"></div>
         </div> 
-        <div class="right-content">
+
+        <div class="background">
           <div>
           <h3>About</h3>
             <p>This is the final project for IAT 103 in 2019 which is about holding a feasible campaign for introducing the idea of avoiding plagiarism to first year students. The biggest part for this project is to design a serial of posters to get attention from the target audience and let them take part in our campaign.</p>
           </div>
-          <div><h3>Process</h3>
-            <ol class="numberedList">
-            <li>Brainstorm: analyzing first year student’s state, what is their need? What is the content on the poster?</li>
-            <li>Decide the elements: daily items to present each student, for instance, mobile phone, pencil and coffee cup.</li>
-            <li>Digital drafts</li>
-            <li>Final Poster</li>
-            </ol>
+          <div>
+          <div><h3>My Role</h3>
+              <p>Major designer and illustrator</p>
           </div>
 
-          <div><h3>Challenge</h3>
-            <p>Since we are creating a serial of posters, it is hard to unify the design style when we have five designer in a group. In order to solve the problem, I communicated with my team members to decide what kinds of elements should be included on the poster, and asked everybody to research some related posters. After researching and brainstorming, we all agreed to use the student’s daily item to symbolize individuals, and use bright color palette to create the posters. As the main designer, I was in charge of create the first layout and the illustration, then my teammates could follow the template to make the same style posters.</p>
+          <div><h3>APPLIED SKILLS/TOOLS</h3>
+            <p>Adobe Illstruator, Indesign, Photoshop, Procreate</p>
+          </div>
+            <!-- <p>Since we are creating a serial of posters, it is hard to unify the design style when we have five designer in a group. In order to solve the problem, I communicated with my team members to decide what kinds of elements should be included on the poster, and asked everybody to research some related posters. After researching and brainstorming, we all agreed to use the student’s daily item to symbolize individuals, and use bright color palette to create the posters. As the main designer, I was in charge of create the first layout and the illustration, then my teammates could follow the template to make the same style posters.</p> -->
         </div>
       </div> 
-      </div>  
-      </section>
-  </div>
-  
+    </div>
+  </section>
+
+  <section></section>
   <div class="container">
-    <h1 class="sub-title">Process</h1>
+    <h1>Process</h1>
 
     <div class="flex-container">
-    <img src="Style_Guide_Template/images/brainstorm.jpg" alt="IAT 103 - poster" class="process-image">
-    <div><h3>Step 1 - Brainstorm</h3><p>Analyzing first year student’s state, what is their need? What is the content on the poster? This step help a team to decide th elements of a poster, and make sure the working direction</p></div>
+    <div>
+    <div class="colors">
+    <div><img src="images/colorPallete1.png" alt="color pallete for posters" class="process-image"></div>
+    <div><img src="images/colorPallete2.png" alt="color pallete for posters" class="process-image"></div>
+    <div><img src="images/colorPallete3.png" alt="color pallete for posters" class="process-image"></div>
+    </div>
+    <div><img src="images/research2.jpg" alt="inspiration" class="researchImage"></div>
+    </div>
     </div>
 
+    <div class="steps"><div><h3>Step 1 - Research and Color Pallete</h3></div><div><p>Analyzing first year student’s state, what is their need? What is the content on the poster? This step help a team to decide th elements of a poster, and make sure the working direction</p></div></div>
 
     <div class="flex-container">
     <div><h3>Step 2 - Draft 1</h3><p>This is a hand draw draft, the purpose of it is to decid the color pallete and the layout. However</p></div>
-    <img src="Style_Guide_Template/images/draft.jpg" alt="IAT 103 - poster" class="posters">
-    <img src="Style_Guide_Template/images/draft2.jpg" alt="IAT 103 - poster" class="posters">
+    <img src="images/draft.jpg" alt="IAT 103 - poster" class="posters">
+    <img src="images/draft2.jpg" alt="IAT 103 - poster" class="posters">
     </div>
 
     <div class="flex-container">
     <div>
-    <img src="Style_Guide_Template/images/coffe.png" alt="IAT 103 - poster" class="icon">
-    <img src="Style_Guide_Template/images/puzzle.png" alt="IAT 103 - poster" class="icon"></div>
+    <img src="images/coffe.png" alt="IAT 103 - poster" class="icon">
+    <img src="images/puzzle.png" alt="IAT 103 - poster" class="icon"></div>
     <div><h3>Step 3 - Illustate visual element</h3><p>Instead of the cartoon character, we would like to use student's daily items to represent each individual, for instance, cofffe cups, puzzel and smart phone.</p></div>
     </div>
 
